# ezcp

./: Cargo.toml  README.md
examples/binpacking/: Cargo.toml
examples/binpacking/src/: main.rs
examples/degree_constrained_tree/: Cargo.toml
examples/degree_constrained_tree/src/: main.rs
examples/nqueens/: Cargo.toml
examples/nqueens/src/: main.rs
examples/sat/: Cargo.toml
examples/sat/src/: main.rs
examples/sudoku/: Cargo.toml
examples/sudoku/src/: main.rs
minizinc/: ezcp.msc  fzn_all_different_int.mzn  fzn_bin_packing.mzn  fzn_bin_packing_capa.mzn  fzn_bin_packing_load.mzn  redefinitions-2.0.mzn
src/: alldifferent.rs  arithmetic.rs  array.rs  binpacking.rs  bitset.rs  brancher.rs  cmp.rs  config.rs  constraint.rs  domain.rs  events.rs  gcc.rs  graph.rs  lib.rs  linear.rs  logic.rs  objective_function.rs  propagator.rs  reify.rs  scc.rs  search.rs  solver.rs  value_selector.rs  variable.rs  variable_selector.rs
tests/: fzn_tests.rs  propagator_tests.rs  search_tests.rs
tests/fzn-examples/: aus.json  cake.json  golomb.json  guests.json  hexagon.json  money.json  prod.json  schur.json  warehouse.json
