[package]
name = "ezcp"
version = "0.0.3"
edition = "2021"

[dependencies]
clap = { "version" = "4.5.58", features = ["derive"], optional = true }
serde_json = { "version" = "1.0.149", optional = true }

[features]
default = ["fzn"]
fzn = ["dep:clap", "dep:serde_json"]

[[bin]]
name = "ezcp-fzn"
required-features = ["fzn"]

[lints.clippy]
new_without_default = "allow"
